Bug 300244 - Inconsistent behavior in the folder properties dialog
Summary: Inconsistent behavior in the folder properties dialog
Status: RESOLVED FIXED
Alias: None
Product: kmail2
Classification: Applications
Component: UI (other bugs)
Version First Reported In: 4.8
Platform: openSUSE Linux
: NOR minor
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-05-18 12:57 UTC by Daniel Faust
Modified: 2012-05-18 15:13 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.8.4
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Daniel Faust 2012-05-18 12:57:25 UTC
If you right click on an imap folder on the left side of the kmail window, a context menu opens. Click on "folder properties..." and the folder properties dialog opens. Go to the "retrieval" tab.
Make sure the "use options from parent folder or account" is unchecked.
Now you can choose one of the two radio buttons under "retrieval options". When selecting "always retrieve full messages" the "keep message bodies locally for ..." input gets disabled.
But when closing the dialog and opening it again the "keep message bodies locally for ..." input is always enabled regardless whether "always retrieve full messages" is selected or not.

Reproducible: Always
Comment 1 Laurent Montel 2012-05-18 15:13:34 UTC
Git commit abc5b56b5f88be1853128994ace2aa0a901273d5 by Montel Laurent.
Committed on 18/05/2012 at 17:13.
Pushed by mlaurent into branch 'master'.

Fix Bug 300244 - Inconsistent behavior in the folder properties dialog

FIXED-IN: 4.8.4

M  +2    -0    akonadi/cachepolicypage.cpp

http://commits.kde.org/kdepimlibs/abc5b56b5f88be1853128994ace2aa0a901273d5
Comment 2 Laurent Montel 2012-05-18 15:13:55 UTC
Git commit 2ccc2c8a6ef51667f98eb0773988ea286cd177d1 by Montel Laurent.
Committed on 18/05/2012 at 17:13.
Pushed by mlaurent into branch 'KDE/4.8'.

Fix Bug 300244 - Inconsistent behavior in the folder properties dialog

FIXED-IN: 4.8.4
(cherry picked from commit abc5b56b5f88be1853128994ace2aa0a901273d5)

M  +2    -0    akonadi/cachepolicypage.cpp

http://commits.kde.org/kdepimlibs/2ccc2c8a6ef51667f98eb0773988ea286cd177d1