Fix Bug 300244 - Inconsistent behavior in the folder properties dialog

FIXED-IN: 4.8.4
BUG: 300244